Refactored initial code in frontend and overall build system.

--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   Module::Build::Tiny: '0.039'
 dynamic_config: 0
-generated_by: 'App::ModuleBuildTiny version 0.038, CPAN::Meta::Converter version 2.150010'
+generated_by: 'App::ModuleBuildTiny version 0.039, CPAN::Meta::Converter version 2.150010'
 license: mit
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,35 +15,40 @@ name: Naro
 provides:
   Naro:
     file: lib/Naro.pm
-    version: v0.1.0
+    version: v0.2.0
   Naro::Actions:
     file: lib/Naro/Actions.pm
-    version: v0.1.0
+  Naro::Command:
+    file: lib/Naro/Command.pm
   Naro::Command::adjoin:
     file: lib/Naro/Command/adjoin.pm
-    version: v0.1.0
-  Naro::DSL:
-    file: lib/Naro/DSL.pm
-    version: v0.1.0
-  Naro::SyntaxExpander:
-    file: lib/Naro/SyntaxExpander.pm
-    version: v0.1.0
-  analyze:
-    file: lib/Naro/Command/analyze.pm
-    version: v0.1.0
-  expand:
+  Naro::Command::expand:
     file: lib/Naro/Command/expand.pm
-    version: v0.1.0
-  process:
+  Naro::Command::list:
+    file: lib/Naro/Command/list.pm
+  Naro::Command::process:
     file: lib/Naro/Command/process.pm
-    version: v0.1.0
+  Naro::CommandUtils::Adjoin:
+    file: lib/Naro/CommandUtils/Adjoin.pm
+  Naro::CommandUtils::Expand:
+    file: lib/Naro/CommandUtils/Expand.pm
+  Naro::CommandUtils::List:
+    file: lib/Naro/CommandUtils/List.pm
+  Naro::Syntax::Adjoiner:
+    file: lib/Naro/Syntax/Adjoiner.pm
+  Naro::Syntax::Expander:
+    file: lib/Naro/Syntax/Expander.pm
+  Naro::Syntax::RuleLister:
+    file: lib/Naro/Syntax/RuleLister.pm
 requires:
   App::Cmd::Setup: '0'
   Carp: '0'
   List::MoreUtils: '0'
+  Naro::SyntaxExpander: '0'
+  Text::ParseWords: '0'
   constant: '0'
   strict: '0'
   warnings: '0'
-version: v0.1.0
+version: v0.2.0
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
 x_spdx_expression: MIT
